# LeadPilot

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  render.yaml  requirements.txt
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 9b7b659d2338_injection_guard_incident_log_and_per_.py  9c7e98deef3b_add_agent_run_reports_table.py  badeb3a5a860_contact_history_and_approval_gate.py  cd645f125bf4_rework_agent_run_locks_to_per_rep_mutex.py  (+5 more)
scripts/: devdb.sh  run_evals.py  seed_demo_data.py  stage_demo_scenario.py  test_twilio_creds.sh  twilio_call_diagnostic_template.py
seed-data/: leadpilot_test_leads_sheet_a.csv
tests/: conftest.py  fakes.py  test_agent_loop.py  test_app.py  test_auth.py  test_dispatch_slack_handoff.py  test_email_drafting.py  test_fetch_ad_hoc_sheet.py  test_fetch_all_leads.py  test_gate.py  test_get_contact_history.py  test_google_credentials.py  test_google_oauth.py  test_google_sheets_connector.py  test_google_sheets_connector_live.py  test_header_mapping.py  test_initiate_lead_call.py  test_injection_alerts.py  test_injection_guard.py  test_locks.py  test_log_call_outcome.py  test_picker_test_harness.py  test_queue_builder.py  test_search_communications.py  test_send_lead_email.py  test_send_lead_text.py  test_tools_registry.py  test_ui.py  test_update_lead_sheet.py  test_verify_drive_contents.py
(+71 files in other folders)
